# ScoutHouse

./: .env.example  .gitignore  CHANGELOG.md  CONCEPT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  lint-warnings.txt
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  openapi.json  pyproject.toml
backend/app/: deps.py  main.py
backend/app/api/v1/: __init__.py  attachments.py  auth.py  events.py  export.py  geocoding.py  health.py  imports.py  mail.py  ops.py  public.py  quotes.py  structures.py  templates.py  users.py
backend/app/core/: config.py  db.py  http_cache.py  limiter.py  logging.py  mail.py  metrics.py  pubsub.py  security.py  sentry.py
backend/app/models/: __init__.py  attachment.py  audit_log.py  availability.py  contact.py  cost_option.py  enum_utils.py  event.py  event_candidate.py  event_contact_task.py  quote.py  structure.py  structure_attachment.py  structure_photo.py  user.py
backend/app/schemas/: __init__.py  attachment.py  auth.py  contact.py  event.py  geocoding.py  public.py  quote.py  structure.py  structure_attachment.py  structure_photo.py  user.py
backend/app/services/: __init__.py  attachments.py  audit.py  costs.py  events.py  export.py  filters.py  geo.py  geocoding.py  mail.py  password_reset.py  structures_import.py  url_monitor.py  users.py
backend/app/tasks/: email_jobs.py  queue.py
backend/app/templates/mail/: candidate_status_changed.html  candidate_status_changed.txt  reset_password.html  (+3 more)
backend/migrations/: env.py
backend/migrations/utils/: postgres.py
backend/migrations/versions/: 20240320_0001_create_structures.py  20240320_0002_structure_geo.py  20240320_0003_structure_availability_costs.py  20240320_0004_events_contacts.py  20240320_0005_quotes.py  20240320_0006_auth_core.py  20240320_0006_auth_security.py  20240320_0007_roles_audit.py  20240320_0008_perf_indexes.py  20240320_0009_contacts.py  20240320_0010_attachments.py  20240320_0011_attachment_description.py  20240320_0011_structure_open_periods_and_fields.py  20240611_0011_structure_extra_details.py  20240701_0012_structure_photos.py  20240701_0012_structure_refactor.py  20240703_0001_add_structure_postal_code.py  20240704_0012_structure_multiple_websites.py  20240710_0013_structure_open_periods_and_fields.py  20240715_0013_contacts_refactor.py  20240718_0014_water_sources.py  20240730_0014_structure_open_period_units.py  20240820_0015_structure_water_sources.py  20240905_0016_structure_altitude.py  20240910_0017_structure_contact_emails.py  20240920_0017_structure_contact_emails.py  20241010_0018_structure_type_enum_fix.py  20241020_0019_structure_cost_modifiers.py  20241105_0020_structure_cost_totals.py  20241112_0021_structure_boolean_flags_nullable.py  20241205_0022_structure_governance_catalog.py  20241220_0023_structure_operational_extensions.py  20250110_0024_attachment_description_backfill.py  20250220_0025_event_branch_segments.py  20250220_0025_structure_postal_code.py  20250301_0026_merge_postal_code_branch.py  20250325_0027_structure_usage_recommendation.py  20250410_0028_event_kambusieri_counts.py  20250410_0028_event_participants_extensions.py  20250425_0029_user_type_and_cost_forfait.py  (+8 more)
backend/scripts/: run-migrations.sh
backend/tests/: conftest.py  test_assignments_user_id.py  test_attachment_tokens.py  test_attachments_api.py  test_attachments_service.py  test_audit_log.py  test_auth_core.py  test_candidate_contact_id.py  test_candidates_conflicts.py  test_contacts_crud.py  test_event_branch_segments.py  test_events_crud.py  test_export_api.py  test_geocoding_api.py  test_geocoding_service.py  test_health.py  test_health_metrics.py  test_http_cache.py  test_import_csv.py  test_import_structures.py  test_indexes_exist.py  test_mail_enqueue.py  test_mail_hooks.py  test_mail_preview.py  test_mail_providers.py  test_metrics.py  test_permissions.py  test_public_api.py  test_publish_hooks.py  test_quotes_api.py  test_quotes_calc.py  test_rate_limit.py  test_reset_password.py  test_sse_single_event.py  test_structure_detail_nplus1.py  test_structure_details.py  test_structure_details_contacts.py  test_structures_api.py  test_structures_import_service.py  test_structures_search.py  (+5 more)
(+125 files in other folders)
