[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false

[project]
name = "scouthouse-api"
version = "0.2.0"
description = "ScoutHouse FastAPI backend"
authors = [{ name = "ScoutHouse" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0",
  "openpyxl>=3.1",
  "python-multipart>=0.0.7",
  "python-jose[cryptography]>=3.3",
  "argon2-cffi>=23.1",
  "slowapi>=0.1.7",
  "httpx>=0.26",
  "email-validator>=2.0",
  "prometheus-fastapi-instrumentator>=7.0",
  "prometheus-client>=0.20",
  "sentry-sdk[fastapi]>=2.0",
  "boto3>=1.34",
  "jinja2>=3.1",
  "redis>=5.0",
  "rq>=1.16",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.3",
  "mypy>=1.8",
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.26",
  "bandit>=1.7",
  "types-psycopg2>=2.9.21.16",
]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
plugins = []
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
