[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false

[project]
name = "scouthouse-api"
version = "0.2.0"
description = "ScoutHouse FastAPI backend"
authors = [{ name = "ScoutHouse" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "pydantic>=2.7.4",
  "pydantic-settings>=2.3.2",
  "sqlalchemy>=2.0.31",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.1.19",
  "python-dotenv>=1.0.1",
  "openpyxl>=3.1.3",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3.0",
  "argon2-cffi>=23.1.0",
  "slowapi>=0.1.9",
  "httpx>=0.27.0",
  "email-validator>=2.1.1",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "prometheus-client>=0.20.0",
  "sentry-sdk[fastapi]>=2.9.0",
  "boto3>=1.34.143",
  "jinja2>=3.1.4",
  "redis>=5.0.5",
  "rq>=1.16.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.8",
  "mypy>=1.10.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "httpx>=0.27.0",
  "bandit>=1.7.9",
  "types-psycopg2>=2.9.21.20240417",
]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
plugins = []
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
